// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card and List Component Card component is working 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    testTitle
  </h3>
  <p>
    testContent
  </p>
</div>
`;

exports[`Card and List Component List component is working 1`] = `
<section
  className="List"
>
  <header
    className="List-header"
  >
    <h2>
      testTitle
    </h2>
  </header>
  <div
    className="List-cards"
  >
    <div
      className="Card"
    >
      <button
        type="button"
      >
        delete
      </button>
      <h3>
        Twelfth card
      </h3>
      <p>
        lorem ipsum
      </p>
    </div>
    <div
      className="Card"
    >
      <button
        type="button"
      >
        delete
      </button>
      <h3>
        Twelfth card
      </h3>
      <p>
        lorem ipsum
      </p>
    </div>
    <button
      className="List-add-button"
      type="button"
    >
       + Add Random Card
    </button>
  </div>
</section>
`;
